--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="icons/favicon.png" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
     <title>
-        Khurram Javed
+        Khurram Azeem Hashmi
     </title>
     
 </head>
@@ -88,7 +88,7 @@
       
 
         </div>
-<!-- <div class="panel panel-success"> -->
+<div class="panel panel-success">
 
 <div class="publications">
     <div class="row">
