--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div align="center">
             <br>
-                <a href="cv.pdf" target="#">
+                <a href="CV.pdf" target="#">
                     CV
                 </a>
                 /
