--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-<!doctype html>
 <html lang="en">
 
 <head>
@@ -51,7 +50,8 @@
             </div>
         
         <div class="col-md-9">
-
+            
+            <h1 align="center">Khurram Azeem Hashmi</h1>
     <h4 align="center"><a href="mailto:khurram_azeem.hashmi@dfki.de">khurram_azeem.hashmi@dfki.de</a></h4>
             <p class="text-justify">
 
