updated website until 3rd Aguust

--- a/index.html
+++ b/index.html
@@ -72,14 +72,17 @@
 <!--        NEWS SESSION COMMENTED FOR NOW-->
       <a id="news" class="anchor"></a>
       <span class="section"style="padding-top: 10px;">News</span>
-      <div  style="height: 120px; overflow: auto; margin-bottom: 5mm;">
+      <div  style="height: 200px; overflow: auto; margin-bottom: 5mm;">
         <table border="0" class="news" style="margin-left: 10%;">
           <tbody>
             <tr>
               <td>
-                <p><strong>[Jul. 2023]</strong> One paper on Learning Instance Representation under Low-light Vision is accepted at <b>ICCV'23</b>.</p>
-                <p><strong>[October. 2022]</strong> One paper on Vido Object detection is accepted at <strong>WACV'23</strong>.</p>
-                <p><strong>[August. 2022]</strong> One paper on Spatio-temporal learnable proposals for Vido Object detection is accepted at <strong>BMVC'22</strong>.</p>
+                <p><strong>[July 2023]</strong> One paper on Learning Instance Representation under Low-light Vision is accepted at <b>ICCV'23</b>.</p>
+                <p><strong>[June 2023]</strong> A comprehensive survey on Object Detection with Transformers is released on arXiv. Besides the preprint, a
+                  <br>unified <a href="https://github.com/mindgarage-shan/transformer_object_detection_survey">reposoitry</a> is published to track the advancements
+                  on transformer-based object detection methods.</p>
+                <p><strong>[October 2022]</strong> One paper on Vido Object detection is accepted at <strong>WACV'23</strong>.</p>
+                <p><strong>[August 2022]</strong> One paper on Spatio-temporal learnable proposals for Vido Object detection is accepted at <strong>BMVC'22</strong>.</p>
               </td>
             </tr>
           </tbody>
@@ -95,13 +98,28 @@
               <img src="figures/featenhancer.gif" width="300" height="200" style="margin-right: 15px;">
             </td>
             <td>
-              <papertitle><a href="https://openaccess.thecvf.com/content/WACV2023/html/Hashmi_BoxMask_Revisiting_Bounding_Box_Supervision_for_Video_Object_Detection_WACV_2023_paper.html">FeatEnHancer: Enhancing Hierarchical Features for Object Detection and Beyond Under Low-Light Vision</a></papertitle>
+              <papertitle><a href="#">FeatEnHancer: Enhancing Hierarchical Features for Object Detection and Beyond Under Low-Light Vision</a></papertitle>
               <br><br>
               <strong>K.A. Hashmi</strong>, G. Kallempudi, D.Stricker, M.Z. Afzal<br>
               <strong>ICCV</strong> 2023 <br>
-              <a href="https://openaccess.thecvf.com/content/WACV2023/papers/Hashmi_BoxMask_Revisiting_Bounding_Box_Supervision_for_Video_Object_Detection_WACV_2023_paper.pdf">[PDF coming soon]</a>
+              <a href="#">[PDF coming soon]</a>
               <a href="https://https://khurramhashmi.github.io/featenhancer">[Webpage coming soon]</a>
-              <a href="https://github.com/khurramHashmi/">[Code coming soon]</a>
+              <a href="https://github.com/khurramHashmi/FeatEnHancer">[Code coming soon]</a>
+              <br><br>
+            </td>
+          </tr>
+          <!--Transformer OD Survey-->
+          <tr>
+            <td>
+              <img src="figures/transformer_OD_survey.png" width="300" height="200" style="margin-right: 15px;">
+            </td>
+            <td>
+              <papertitle><a href="https://arxiv.org/abs/2306.04670">Object Detection with Transformers: A Review</a></papertitle>
+              <br><br>
+              T. Shehzadi <strong>K.A. Hashmi</strong>, D.Stricker, M.Z. Afzal<br>
+              <strong>arXiv</strong> 2023 <br>
+              <a href="https://arxiv.org/pdf/2306.04670.pdf">[PDF]</a>
+              <a href="https://github.com/mindgarage-shan/transformer_object_detection_survey">[Code]</a>
               <br><br>
             </td>
           </tr>
@@ -208,9 +226,9 @@
 
 
 
-      <div style=" width: 30%; height: 5cm; margin-left: 35%; margin-top: 10mm;">
-        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=0fy2G3f1bJ1gwddxo3-AyBeEjFBu3GQdJtb4LY8j7ls'></script>
-      </div>
+<!--      <div style=" width: 30%; height: 5cm; margin-left: 35%; margin-top: 10mm;">-->
+<!--        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=0fy2G3f1bJ1gwddxo3-AyBeEjFBu3GQdJtb4LY8j7ls'></script>-->
+<!--      </div>-->
       <p>
         <font color="#444444" face="Lato" size="2">© 2023 Khurram Azeem Hashmi. Thanks to <a href="https://ma-xu.github.io/"><font color="#000080">Xu Ma</font></a>, <a href="http://people.csail.mit.edu/celiu"><font color="#000080">Dr. Ce Liu</font></a> and
         <a href="https://deqings.github.io/index.html"><font color="#000080">Dr. Deqing Sun</font></a> for the template. </font>
