--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </p>
         <p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;">
         <h3><font color="black" face="Lato">Reviewer of Conferences:<br></font></h3>
-        ECCV, WACV, BMVC, ICDAR.
+        CVPR2024, ECCV2022, WACV2023, BMVC2022, ICDAR2023.
         </p>
       </ul>
 
