--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
       <a id="awards"></a><span class="section">Services and Reviews </span>
       <ul style="margin-left: 10%;">
         <p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;">
+        <h3><font color="black" face="Lato">Reviewer of Conferences:<br></font></h3>
+        CVPR2024, WACV2023, ECCV2022, BMVC2022, ICDAR2023.
+        </p>
+        <p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;">
         <h3><font color="#444444" face="Lato">Reviewer of Journals:<br></font></h3>
         IEEE Transactions on Circuits and Systems for Video Technology (TCSVT) <br>
         IEEE Access<br>
@@ -209,10 +213,7 @@
         Sensors<br>
         Journal of Imaging<br>
       </p>
-        <p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;">
-        <h3><font color="black" face="Lato">Reviewer of Conferences:<br></font></h3>
-        CVPR2024, ECCV2022, WACV2023, BMVC2022, ICDAR2023.
-        </p>
+
       </ul>
 
       <!-- Awards session -->
