recent news added

--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
           <tbody>
             <tr>
               <td>
-                <p><strong>[July 2023]</strong> One paper on Learning Instance Representation under Low-light Vision is accepted at <b>ICCV'23</b>.</p>
+                
+                <p><strong>[March 2024]</strong> Sparse Semi-Detr: Sparse Learnable Queries for Semi-Supervised Object Detection is accepted at <b>CVPR'24</b>. 
+                Many congratulations to co-authors. More details will follow.</p>
+                <p><strong>[July 2023]</strong> One paper on Learning Instance Representation for downstream vision tasks under Low-light is accepted at <b>ICCV'23</b>.</p>
                 <p><strong>[June 2023]</strong> A comprehensive survey on Object Detection with Transformers is released on arXiv. Besides the preprint, a
                   <br>unified <a href="https://github.com/mindgarage-shan/transformer_object_detection_survey">reposoitry</a> is published to track the advancements
                   on transformer-based object detection methods.</p>
+                <p><strong>[February 2023]</strong> I feel honoured to announce that I am nominated for an <strong>AI-Newcomer 2023 award</strong> by the German Society of Computer Science.
+                  Please Vote now by clicking <a href="https://kicamp.org/en/ki-camp-2023/ai-newcomers-2023/detail?tx_gicampaign_listview%5Baction%5D=detail&tx_gicampaign_listview%5Bcontroller%5D=Campaign&tx_gicampaign_listview%5Buser%5D=22721&cHash=4c2ba362676e43afb3073b100f3c3a1d">Here</a>.</p>
                 <p><strong>[October 2022]</strong> One paper on Vido Object detection is accepted at <strong>WACV'23</strong>.</p>
                 <p><strong>[August 2022]</strong> One paper on Spatio-temporal learnable proposals for Vido Object detection is accepted at <strong>BMVC'22</strong>.</p>
               </td>
@@ -202,7 +207,7 @@
       <ul style="margin-left: 10%;">
         <p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;">
         <h3><font color="black" face="Lato">Reviewer of Conferences:<br></font></h3>
-        CVPR2024, WACV2023, ECCV2022, BMVC2022, ICDAR2023.
+        <strong>ECCV2024, CVPR2024, WACV2023, ECCV2022, BMVC2022</strong>.
         </p>
         <p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;">
         <h3><font color="#444444" face="Lato">Reviewer of Journals:<br></font></h3>
@@ -221,7 +226,7 @@
       <ul style="margin-left: 10%;">
         <li><h4>Received merit based full scholarship for complete Bachelors </h4></li>
         <li><h4>Nominated for the best AI Newcomer Award by German Assoication of Computer Science</h4></li>
-
+        <li><h4>Nominated for the AI Person of the Year Award 2024 by data:unplugged and t3n Magazin</h4></li>
       </ul>
 
 
