--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <strong>K.A. Hashmi</strong>, G. Kallempudi, D.Stricker, M.Z. Afzal<br>
               <strong>ICCV</strong> 2023 <br>
               <a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Hashmi_FeatEnHancer_Enhancing_Hierarchical_Features_for_Object_Detection_and_Beyond_Under_ICCV_2023_paper.pdf">[PDF]</a>
-              <a href="https://https://https://khurramhashmi.github.io/FeatEnHancer/">[Webpage]</a>
+              <a href="https://khurramhashmi.github.io/FeatEnHancer/">[Webpage]</a>
               <a href="https://github.com/khurramHashmi/FeatEnHancer">[Code]</a>
               <br><br>
             </td>
