--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <tbody>
             <tr>
               <td>
-                
+                <p><strong>[May 2024]</strong> Code for FeatEnHancer has been released and can be accessed through this <a href="https://github.com/khurramHashmi/FeatEnHancer">Link.</a></p>
                 <p><strong>[March 2024]</strong> Sparse Semi-Detr: Sparse Learnable Queries for Semi-Supervised Object Detection is accepted at <b>CVPR'24</b>. 
                 Many congratulations to co-authors. More details will follow.</p>
                 <p><strong>[July 2023]</strong> One paper on Learning Instance Representation for downstream vision tasks under Low-light is accepted at <b>ICCV'23</b>.</p>
