cvpr paper added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <tr>
             <td width="80%">
               I am a researcher at the German Research Center for Artificial Intelligence <a href="https://dfki.de/", target="_blank">(DFKI)</a> and a PhD Candidate at RPTU Kaiserlautern-Landau, where
-                I work closely with Prof. Dr. Didier Stricker on developing new approaches for visual recognition. I obtained my bachelor's degree in Computer Science from University of Computer
+                I work closely with Prof. Dr. Didier Stricker on developing new approaches for objects understanding in videos and challenging environments. I obtained my bachelor's degree in Computer Science from University of Computer
                 and Emerging Sciences, Pakistan, in 2016, and the M.S. degree and my master's degree in Artificial Intelligence from the Technical University of Kaiserslautern.
             </td>
           </tr>
@@ -97,6 +97,21 @@
       <a id="publications" class="anchor"></a><span class="section">Selected Publications <a href="https://scholar.google.com/citations?user=0CN11t4AAAAJ&hl=en">[Google Scholar]</a> </span>
       <table border="0" width="90%" class="paper" style="border-collapse:separate; border-spacing:10px; margin-left: 7%;">
         <tbody>
+        <!--Sparse SEMI-DETR CVPR-->
+          <tr>
+            <td>
+              <img src="figures/sparse_semidetr.jpeg" width="300" height="200" style="margin-right: 15px;">
+            </td>
+            <td>
+              <papertitle><a href="https://arxiv.org/abs/2306.04670">Sparse Semi-DETR: Sparse Learnable Queries for Semi-Supervised Object Detection</a></papertitle>
+              <br><br>
+              T. Shehzadi <strong>K.A. Hashmi</strong>, D.Stricker, M.Z. Afzal<br>
+              <strong>CVPR</strong> 2024 <br>
+              <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Shehzadi_Sparse_Semi-DETR_Sparse_Learnable_Queries_for_Semi-Supervised_Object_Detection_CVPR_2024_paper.pdf">[PDF]</a>
+              <a href="https://www.youtube.com/watch?v=lCjCveKC8ys&ab_channel=TahiraShehzadi">[Video]</a>
+              <br><br>
+            </td>
+          </tr>
           <!--FeatEnHancer-->
           <tr>
             <td>
